--- a/src/Components/Views/MyreservationView.css
+++ b/src/Components/Views/MyreservationView.css
@@ -2,9 +2,9 @@
     border : 3px solid rgb(250, 80, 0, 0.8);
     border-radius: 10px;
     margin: 3%;
+    margin-top: 2%;
     width: auto;
     text-align: left;
-    margin-top: 1%;
     padding: 20px 5%;
 }
 
@@ -12,17 +12,18 @@
     border : 3px solid gray;
     border-radius: 10px;
     margin: 3%;
+    margin-top: 2%;
     width: auto;
     text-align: left;
-    margin-top: 1%;
     padding: 20px 5%;
 }
 
-.reservation h3 {
+.UporPasts {
     text-align: left;
-    margin:0;
+    margin:0%;
     margin-left: 3%;
-    
+    margin-top: 50px;
+    font-size: 25px;
 }
 
 .reservationWrapper {
@@ -33,7 +34,9 @@
 
 .kitchen_name {
     font-size: 28px;
-    margin-bottom: 5%;
+    text-align: left;
+    margin:0%;
+    margin-bottom: 2%;
 }
 
 .cancelbtn {
@@ -49,11 +52,22 @@
     border: none;
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
     opacity: 0.9;
+    cursor: pointer;
 }
 
-.h4-res {
+.DateIngredients {
+    color: gray;
+    display: inline-block;
     font-weight: 400;
     font-size: 20px;
-    margin-top: 3%;
-    margin-bottom: 0%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.value_DateIngredients {
+    display: inline-block;
+    font-weight: 400;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
