--- a/src/Components/Views/CancelModalView.css
+++ b/src/Components/Views/CancelModalView.css
@@ -14,8 +14,8 @@
     background-color: white;
     position: relative;
     box-sizing: border-box;
-    margin: 10% auto;
-    padding: 5%;
+    margin: 15% auto;
+    padding: 30px 20px;
     background: #fff;
     border-radius: 10px;
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
