--- a/src/Components/Views/DetailView.css
+++ b/src/Components/Views/DetailView.css
@@ -176,6 +176,7 @@ hr {
     padding-top: 0;
     padding-bottom: 5px;
     vertical-align: text-bottom;
+    font-size: 16px;
 }
 
 .datePicker button {
