--- a/src/Components/Views/LoginModalView.css
+++ b/src/Components/Views/LoginModalView.css
@@ -53,8 +53,7 @@
 }
 
 .modal-title {
-    margin-bottom: 8%;
-    margin-top: 8%;
+    margin-bottom: 15px;
     height: 50px;
     font-size: 35px;
     display: flex;
