--- a/src/Components/Views/QuestionView.css
+++ b/src/Components/Views/QuestionView.css
@@ -10,14 +10,14 @@
 
 .Qmodal-question {
     width: 96%;
-    height: 95%;
+    height: auto;
     background-color: white;
     position: relative;
     box-sizing: border-box;
-    margin: 1%;
-    margin-left: 2%;
-    padding: 2%;
-    padding-top: 1%;
+    margin-left: 30px;
+    margin-top: 30px;
+    padding: 30px;
+    padding-top: 20px;
     background: #fff;
     border-radius: 10px;
     box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
@@ -69,8 +69,8 @@
 }
 
 .pictures {
-    margin: 1% 5%;
-    padding: 0% 5%;
+    margin: 30px 90px;
+    padding: 0% 60px;
     text-align: center;
     vertical-align: middle;
     width: 80%;
@@ -78,7 +78,7 @@
 
 .descriptions {
     text-align: center;
-    font-size: 20px;
+    font-size: 23px;
 }
 
 .div-descriptions {
