--- a/src/Components/Buttons/MyPageButton.css
+++ b/src/Components/Buttons/MyPageButton.css
@@ -22,6 +22,16 @@
     font-weight: 600;
 }
 
+.signupLoginText {
+    vertical-align: top;
+    display: inline-block;
+    padding-left: 5px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    font-weight: 600;
+    font-size: 18px;
+}
+
 .userIcon {
     width: 40px;
     display: inline-block;
