--- a/src/Components/Views/MyinformationView.css
+++ b/src/Components/Views/MyinformationView.css
@@ -34,14 +34,16 @@
     vertical-align: top;
     font-size: 120%;
     padding: 9px 12px;
-    box-sizing: border-box;
+    background-color: #f8f9fa;
+    border: 1.9px solid #c4c4c4;
     border-radius: 10px;
-    background-color: #c4c4c4;
-    color: black;
-    border: none;
-    box-shadow: rgb(0 0 0 / 12%) 0px 6px 16px;
-    opacity: 0.9;
+    color: #3c4043;
     cursor: pointer;
+    font-weight: 500;
+}
+
+.logoutbtn:hover {
+    border: 1.9px solid #3c4043;
 }
 
 .h4-Info {
