--- a/src/Page/HomePage.css
+++ b/src/Page/HomePage.css
@@ -1,5 +1,30 @@
 .question_image {
     position: fixed;
-    top: calc(50% + 100px);
+    top: calc(50% + 70px);
     left: calc(50% - 140px);
+    background-color: #f8f9fa;
+    border: 1.9px solid #f8f9fa;
+    border-radius: 10px;
+    color: #3c4043;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+.question_image:hover {
+    border: 1.9px solid #c4c4c4;
+}
+
+
+.questionImg {
+    width: 30px;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+
+.questionText {
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 5px;
+    font-weight: 500;
 }
