--- a/src/Components/Views/SearchView.css
+++ b/src/Components/Views/SearchView.css
@@ -112,6 +112,7 @@
 .btnText {
     display: inline-block;
     vertical-align: top;
+    font-size: 20px;
     margin-top: 4px;
     font-weight: 500;
 }
