--- a/src/Components/Views/SearchView.css
+++ b/src/Components/Views/SearchView.css
@@ -65,7 +65,7 @@
 }
 
 .btn_wrapper {
-    margin-top: 10px;
+    margin-top: 20px;
     margin-left: calc(50% - 236px);
 }
 
@@ -77,7 +77,7 @@
     border: 3px solid #fc854d;
     border-radius: 10px;
     color: #3c4043;
-    padding: 10px 15px;
+    padding: 10px 8px;
     cursor: pointer;
     vertical-align: top;
 }
@@ -86,6 +86,8 @@
     display: inline-block;
     margin-right: 20px;
     height: 30px;
+    margin-top: 3px;
+    margin-left: 3px;
     /* margin-top: 3px; */
 }
 
@@ -93,6 +95,7 @@
     height: 30px;
     display: inline-block;
     margin-right: 12px;
+    margin-top: 1px;
 }
 
 .recommend_btn {
@@ -114,5 +117,6 @@
     vertical-align: top;
     margin-top: 4px;
     font-weight: 500;
+    font-weight: 22px;
 }
 
