--- a/src/Components/Views/SearchView.css
+++ b/src/Components/Views/SearchView.css
@@ -74,7 +74,7 @@
     width: 190px;
     height: 35px;
     background-color: #f8f9fa;
-    border: 3px solid #fc854d;
+    border: 2px solid #dfe1e5;
     border-radius: 10px;
     color: #3c4043;
     padding: 10px 8px;
@@ -103,7 +103,7 @@
     width: 190px;
     height: 35px;
     background-color: #f8f9fa;
-    border: 3px solid #fc854d;
+    border: 2px solid #dfe1e5;
     border-radius: 10px;
     color: #3c4043;
     padding: 10px 15px;
