--- a/src/Page/HomePage.css
+++ b/src/Page/HomePage.css
@@ -2,16 +2,16 @@
     position: fixed;
     top: calc(50% + 120px);
     left: calc(50% - 140px);
-    background-color: #f8f9fa;
-    border: 1.9px solid #f8f9fa;
-    border-radius: 10px;
     color: #3c4043;
     padding: 10px 15px;
     cursor: pointer;
+    border: 1.9px solid transparent;
+    border-radius: 10px;
 }
 
 .question_image:hover {
     border: 1.9px solid #c4c4c4;
+    border-radius: 10px;
 }
 
 
