--- a/src/Page/SearchPage.css
+++ b/src/Page/SearchPage.css
@@ -77,6 +77,11 @@
     height: 30px;
 }
 
+.chefImg {
+    height: 600px;
+    margin-left: calc((100% - 427px) /2);
+}
+
 .resultsBox {
     padding-bottom: 5px;
     border-bottom: 1px solid rgb(221, 221, 221);
