--- a/src/Components/Views/SearchView.css
+++ b/src/Components/Views/SearchView.css
@@ -6,12 +6,12 @@
     display: flex;
     margin: auto;
     background-color: rgb(250, 80, 0, 0.8); 
-    border-radius:25px;
+    border-radius:28px;
 }
 
 #input{
     width: calc(100% - 30px);
-    max-width: 960px;
+    max-width: 1000px;
     height:70px;
     font-size:50px;
     margin:auto;
@@ -82,6 +82,10 @@
     vertical-align: top;
 }
 
+.add_btn:hover {
+    border: 2px solid #c4c4c4;
+}
+
 .add_img {
     display: inline-block;
     margin-right: 20px;
@@ -110,6 +114,10 @@
     cursor: pointer;
     margin-left: 20px;
     vertical-align: top;
+}
+
+.recommend_btn:hover {
+    border: 2px solid #c4c4c4;
 }
 
 .btnText {
