--- a/src/Components/Views/SearchHeaderViewLeft.css
+++ b/src/Components/Views/SearchHeaderViewLeft.css
@@ -25,8 +25,7 @@
 
 .searchInputWrapper {
     border-radius: 15px;
-    background-color: #FA5000;
-    opacity: 0.8;
+    background-color: #fc854d;
     width: 460px;
     height: 48px;
     margin-top: 4px;
