--- a/src/Page/SearchPage.css
+++ b/src/Page/SearchPage.css
@@ -2,7 +2,7 @@
     width: calc(45% - 40px);
     margin-left: 30px;
     display: inline-block;
-    height: calc(100vh - 150px);
+    height: 100%;
     margin-top: 130px;
     vertical-align: top;
     margin-right: 10px;
@@ -78,10 +78,9 @@
 }
 
 .chefImg {
-    margin-top: 10%;
     width: 50%;
     margin-left: 25%;
-    height: 80%
+    height: 90%
 }
 
 .resultsBox {
