--- a/src/Components/Views/SearchView.css
+++ b/src/Components/Views/SearchView.css
@@ -109,7 +109,8 @@
     background-color: #f8f9fa;
     border: 2px solid #dfe1e5;
     border-radius: 10px;
-    color: #3c4043;
+    color: #fc854d;
+    font-weight: bolder;
     padding: 10px 15px;
     cursor: pointer;
     margin-left: 20px;
