--- a/src/Components/Views/SearchView.css
+++ b/src/Components/Views/SearchView.css
@@ -109,8 +109,7 @@
     background-color: #f8f9fa;
     border: 2px solid #dfe1e5;
     border-radius: 10px;
-    color: #fc854d;
-    font-weight: bolder;
+    color: #fa5000;
     padding: 10px 15px;
     cursor: pointer;
     margin-left: 20px;
